--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<h1 class="text-center">Our Menu</h1>
 
-	<div class="row container container-fluid">
+	<div class="container-fluid">
 	<div class="col-md-12 col-sm-12 col-xs-12" id="chicken-div">
 		<section>
 		<div id="chicken">
