--- a/index.html
+++ b/index.html
@@ -48,37 +48,81 @@
 	<h1 class="text-center">Our Menu</h1>
 
 	<div class="container-fluid">
-	<div class="col-md-12 col-sm-12 col-xs-12" id="chicken-div">
-		<section>
-		<div id="chicken">
-			<h4 class="text-center">Chicken</h4>
-		</div>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac.
-		</p>
-		</section>
-	</div>
-	<div class="col-md-12 col-sm-12 col-xs-12" id="beef-div">
-		<section>
-		<div id="beef">
-			<h4 class="text-center">Beef</h4>
-		</div>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac.
-		</p>
-		</section>
-	</div>
-	<div class="col-md-12 col-sm-12 col-xs-12" id="sushi-div">
-		<section>
-		<div id="sushi">
-			<h4 class="text-center">Sushi</h4>
-		</div>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac.
-		</p>
-		</section>
-	</div>
-	</div>
+		<div class="row px-2">
+			<div class="col-lg-4 col-md-6 parentDiv">
+				<div class="childDiv">
+					<section>
+		                           <div id="chicken">
+						   <h4 class="text-center">Chicken </h4>
+				           </div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						Maecenas auctor accumsan enim id feugiat. Aenean a mollis
+						elit, quis consequat ante. Aliquam congue accumsan semper.
+						Cras ultricies tempor elit, a cursus mauris condimentum sed.
+						Nullam mollis ipsum eget dui bibendum, vel consectetur purus dignissim.
+						Maecenas sed tellus et libero ultrices euismod. Sed id dictum orci.
+						Phasellus nisl quam, sagittis non consequat at, fermentum id quam.
+						Quisque tincidunt felis et blandit posuere. Maecenas quis purus arcu.
+						Ut fermentum, nisl non luctus condimentum, mauris felis pellentesque erat,
+						a tincidunt neque quam quis sapien. Donec purus purus, dictum ut luctus quis,
+						molestie ut libero. Sed in faucibus mi, vitae varius massa.
+						Maecenas vel orci non tellus venenatis eleifend tempus eget odio.
+					</p>
+					</section>
+
+			</div>
+			</div>
+			<div class="col-lg-4 col-md-6 parentDiv">
+				<div class="childDiv">
+					<section>
+		                           <div id="beef">
+						   <h4 class="text-center"> beef </h4>
+				           </div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						Maecenas auctor accumsan enim id feugiat. Aenean a mollis
+						elit, quis consequat ante. Aliquam congue accumsan semper.
+						Cras ultricies tempor elit, a cursus mauris condimentum sed.
+						Nullam mollis ipsum eget dui bibendum, vel consectetur purus dignissim.
+						Maecenas sed tellus et libero ultrices euismod. Sed id dictum orci.
+						Phasellus nisl quam, sagittis non consequat at, fermentum id quam.
+						Quisque tincidunt felis et blandit posuere. Maecenas quis purus arcu.
+						Ut fermentum, nisl non luctus condimentum, mauris felis pellentesque erat,
+						a tincidunt neque quam quis sapien. Donec purus purus, dictum ut luctus quis,
+						molestie ut libero. Sed in faucibus mi, vitae varius massa.
+						Maecenas vel orci non tellus venenatis eleifend tempus eget odio.
+					</p>
+					</section>
+
+			</div>
+			</div>
+			<div class="col-lg-4 col-md-12 parentDiv">
+				<div class="childDiv">
+					<section>
+		                           <div id="beef">
+						   <h4 class="text-center"> beef </h4>
+				           </div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						Maecenas auctor accumsan enim id feugiat. Aenean a mollis
+						elit, quis consequat ante. Aliquam congue accumsan semper.
+						Cras ultricies tempor elit, a cursus mauris condimentum sed.
+						Nullam mollis ipsum eget dui bibendum, vel consectetur purus dignissim.
+						Maecenas sed tellus et libero ultrices euismod. Sed id dictum orci.
+						Phasellus nisl quam, sagittis non consequat at, fermentum id quam.
+						Quisque tincidunt felis et blandit posuere. Maecenas quis purus arcu.
+						Ut fermentum, nisl non luctus condimentum, mauris felis pellentesque erat,
+						a tincidunt neque quam quis sapien. Donec purus purus, dictum ut luctus quis,
+						molestie ut libero. Sed in faucibus mi, vitae varius massa.
+						Maecenas vel orci non tellus venenatis eleifend tempus eget odio.
+					</p>
+					</section>
+
+</div>
+</div>
+</div>
+</div>
 
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
